tests/baselines/reference/classAbstractOverrideWithAbstract.errors.txt
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractOverrideWithAbstract.ts(19,7): error TS18052: Non-abstract class 'CC' does not implement all abstract members of 'BB'


==== tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractOverrideWithAbstract.ts (1 errors) ====
    class A {
        foo() {}
    }
    
    abstract class B extends A {
        abstract foo();
    }
    
    abstract class AA {
        foo() {}
        abstract bar();
    }
    
    abstract class BB extends AA {
        abstract foo();
        bar () {}
    }
    
    class CC extends BB {} // error
          ~~
!!! error TS18052: Non-abstract class 'CC' does not implement all abstract members of 'BB'
!!! related TS2515 tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractOverrideWithAbstract.ts:15:14: Non-abstract class 'CC' does not implement inherited abstract member 'foo' from class 'BB'.
    
    class DD extends BB {
        foo() {}
    }